# osc

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  copyright  libosc++-dev.install
lib/: CMakeLists.txt  bundle.cpp  dispatch.cpp  element.cpp  message.cpp  osc++.hpp  packet.cpp  value.cpp
lib/osc++/: bundle.hpp  dispatch.hpp  element.hpp  elements.hpp  elements_0.hpp  errors.hpp  message.hpp  packet.hpp  types.hpp  value.hpp  values.hpp
